# ntnu_robotlab

./: README.md
gantry_gazebo/: CMakeLists.txt  Readme.md  package.xml
gantry_gazebo/config/: joint_trajectory_controller.yaml
gantry_gazebo/launch/: controller_utils.launch  gantry_robot_control.launch  gantry_robot_gazebo.launch  load_gantry_gazebo.launch  load_gantry_robot_gazebo.launch  test_gantry_gazebo.launch  test_gantry_robot_gazebo.launch
gantry_gazebo/urdf/: .gantry_gazebo_macro.xacro.swp  gantry_gazebo.xacro  gantry_gazebo_macro.xacro  gantry_gravity_macro.xacro  gantry_robot_gazebo.xacro  gantry_robot_gazebo_macro.xacro  gantry_transmission_macro.xacro  gazebo.xacro
gantry_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
gantry_moveit_config/config/: fake_controllers.yaml  gantry.srdf  joint_limits.yaml  ompl_planning.yaml
gantry_moveit_config/launch/: demo.launch  move_group.launch  moveit_rviz.launch  ompl_planning_pipeline.launch.xml  planning_context.launch  (+6 more)
gantry_support/: CMakeLists.txt  gantry.srdf  package.xml
gantry_support/launch/: both.launch  gantry.launch  gantry_robot.launch  load_gantry.launch  load_gantry_robot.launch  test_gantry.launch  test_gantry_robot.launch
gantry_support/meshes/: Cube.005.dae  Cube.005.stl  Cylinder.dae  Cylinder.stl  Gantry simple lnks.dae  VIFS01.000.dae  VIFS01.000.stl  VIFS01.001.dae  VIFS01.001.stl  VIFS42.000.dae  VIFS42.000.stl  VIFS42.001.dae  VIFS43.000.dae  VIFS43.001.dae  VIFS43.001.stl  VIFS96.001.dae  VIFS96.dae  VIFS96.stl
gantry_support/rviz/: urdf.rviz
gantry_support/scripts/: blender_urdf_to_xacro.sh  gantry_joint_names.sed  urdf_to_xacro.sed
gantry_support/urdf/: both.xacro  gantry.urdf  gantry.xacro  gantry_macro.xacro  gantry_macro.xacro.bakcup  gantry_robot.urdf  gantry_robot.xacro  gantry_robot_macro.xacro
moveit_tests/: CMakeLists.txt  package.xml
ntnu_robotlab/: CMakeLists.txt  package.xml
robotlab/: package.xml
robotlab_gazebo/: CMakeLists.txt  Readme.md  package.xml
robotlab_moveit_config/: .setup_assistant  CMakeLists.txt  Readme.md  package.xml
robotlab_moveit_plugins/: CMakeLists.txt  Readme.md  package.xml  robotlab_floor_manipulator_moveit_ikfast_plugin_description.xml  robotlab_gantry_manipulator_moveit_ikfast_plugin_description.xml
robotlab_support/: CMakeLists.txt  Readme.md  package.xml
thrivaldi_common/: CMakeLists.txt  package.xml
(+121 files in other folders)
