<?xml version="1.0"?>
<package format="2">
  <name>ntnu_robotlab</name>
  <version>0.0.1</version>
  <description>Collection of packages for robotlab.</description>
  <maintainer email="ivareri@stud.ntnu.no">Ivar Eriksen</maintainer>
  <author email="ivareri@stud.ntnu.no">Ivar Eriksen</author>
  <license>BSD</license>


  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>gantry_support</exec_depend>
  <exec_depend>gantry_gazebo</exec_depend>
  <exec_depend>kuka_kr16_support</exec_depend>
  <exec_depend>kuka_kr16_gazebo</exec_depend>
  <exec_depend>kuka_resources</exec_depend>
  <exec_depend>kuka_rsi_hw_interface</exec_depend>
  <exec_depend>kuka_rsi_simulator</exec_depend>

  <export>
    <metapackage/>
  </export>
</package>
